--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,11 @@ on:
 
 jobs:
   test:
+    strategy:
+      matrix:
+        node-version: ["14", "16", "18"]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
     uses: ./.github/workflows/test-reusable.yml
+    with:
+      node-version: ${{ matrix.node-version }}
+      os: ${{ matrix.os }}
