Remove needless npx

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ybiquitous/.github",
   "private": true,
   "scripts": {
-    "prettier": "npx prettier --cache --ignore-path .gitignore .",
+    "prettier": "prettier --cache --ignore-path .gitignore .",
     "prettier:check": "npm run prettier -- --check",
     "prettier:write": "npm run prettier -- --write",
     "lint": "npm run prettier:check",
