--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: ["14", "16", "18"]
-        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        os: ["ubuntu-latest"]
     uses: ./.github/workflows/test-reusable.yml
     with:
       node-version: ${{ matrix.node-version }}
