--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 
 on:
   push:
@@ -17,3 +17,6 @@ jobs:
     with:
       node-version: ${{ matrix.node-version }}
       os: ${{ matrix.os }}
+
+  lint:
+    uses: ./.github/workflows/lint-reusable.yml
