fix: enable publish by default in release workflow

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -6,7 +6,7 @@ on:
       publish:
         description: Publish to registry
         required: false
-        default: false
+        default: true
         type: boolean
 
 jobs:
