chore: add `npm run commitlint`

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "prettier": "prettier --cache --ignore-path .gitignore .",
     "prettier:check": "npm run prettier -- --check",
     "prettier:write": "npm run prettier -- --write",
+    "commitlint": "commitlint --from HEAD~3",
     "lint": "npm run prettier:check",
     "format": "npm run prettier:write",
     "test": "npm run lint"
