--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -33,7 +33,7 @@ jobs:
           prev_tag_name=$(gh release view --json tagName --jq .tagName || echo '')
 
           if [ -n "${prev_tag_name}" ]; then
-            echo ''
+            echo '' >> notes.txt
             echo "https://github.com/${GITHUB_REPOSITORY}/compare/${prev_tag_name}...${GITHUB_REF_NAME}" >> notes.txt
           fi
 
