--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -2,12 +2,10 @@ name: Node.js Release (reusable)
 
 on:
   workflow_call:
-    inputs:
-      publish:
-        description: Publish to registry
+    secrets:
+      npm-token:
+        description: npm token
         required: false
-        default: true
-        type: boolean
 
 jobs:
   release:
@@ -24,10 +22,11 @@ jobs:
       - run: npm --global install npm@latest
       - run: npm ci
       - run: npm publish
-        if: ${{ inputs.publish }}
+        if: ${{ secrets.npm-token }}
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: |
+          NODE_AUTH_TOKEN: ${{ secrets.npm-token }}
+      - name: Create GitHub release
+        run: |
           echo "See the [changelog](https://github.com/${GITHUB_REPOSITORY}/blob/${GITHUB_REF_NAME}/CHANGELOG.md) for details." >> notes.txt
 
           prev_tag_name=$(gh release view --json tagName --jq .tagName || echo '')
