--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["14", "16", "18"]
+        node-version: ["lts/*"]
         os: ["ubuntu-latest"]
     uses: ./.github/workflows/nodejs-test-reusable.yml
     with:
