--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -10,6 +10,8 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
