--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "prettier:check": "npm run prettier -- --check",
     "prettier:write": "npm run prettier -- --write",
     "commitlint": "commitlint --from HEAD~5",
-    "lint": "npm run prettier:check",
+    "lint": "npm run prettier:check && npm run commitlint",
     "format": "npm run prettier:write",
-    "test": "npm run lint && npm run commitlint"
+    "test": "echo \"No tests!\""
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
