feat: enable `concurrency` for Node.js releasing
To prevent duplicate requests.

--- a/.github/workflows/nodejs-release.yml
+++ b/.github/workflows/nodejs-release.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags: ["**"]
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   release:
     uses: ./.github/workflows/nodejs-release-reusable.yml
