--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -9,13 +9,18 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+      - name: Set up Node.js LTS
+        uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
           cache: npm
-      - run: npm --global install npm@latest
-      - run: npm ci
-      - run: npm run lint
+      - name: Install latest npm
+        run: npm --global install npm@latest
+      - name: Install dependencies
+        run: npm ci
+      - name: Run lint
+        run: npm run lint
