--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -23,15 +23,20 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node.js LTS
+        uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
           registry-url: "https://registry.npmjs.org"
           cache: npm
-      - run: npm --global install npm@latest
-      - run: npm ci
-      - run: npm publish
+      - name: Install latest npm
+        run: npm --global install npm@latest
+      - name: Install dependencies
+        run: npm ci
+      - name: Publish to npm registry
+        run: npm publish
         if: ${{ inputs.publish }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm-token }}
