--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -20,11 +20,16 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node.js ${{ inputs.node-version }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ inputs.node-version }}
           cache: npm
-      - run: npm --global install npm@latest
-      - run: npm ci
-      - run: npm test --ignore-scripts
+      - name: Install latest npm
+        run: npm --global install npm@latest
+      - name: Install dependencies
+        run: npm ci
+      - name: Run test
+        run: npm test --ignore-scripts
