feat: add reusable workflow for Ruby releasing

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -15,6 +15,7 @@ on:
         type: boolean
     secrets:
       npm-token:
+        description: Auth token for npm registry
         required: false
 
 jobs:
