--- a/.github/workflows/ruby-ci.yml
+++ b/.github/workflows/ruby-ci.yml
@@ -9,3 +9,6 @@ on:
 jobs:
   test:
     uses: ./.github/workflows/ruby-test-reusable.yml
+    with:
+      ruby-version: '["head"]'
+      os: '["ubuntu-latest"]'
