--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v3
