--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ${{ inputs.os }}
     permissions:
       contents: read
+    timeout-minutes: 30
     steps:
       - name: Checkout
         uses: actions/checkout@v3
