--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -34,7 +34,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           cache: npm
       - name: Install latest npm
-        run: npm --global install npm@latest
+        run: npm --global install npm@latest && npm -v
       - name: Install dependencies
         run: npm ci
       - name: Publish to npm registry
