--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ inputs.node-version }}
           cache: npm
       - name: Install latest npm
-        run: npm --global install npm@latest
+        run: npm --global install npm@latest && npm -v
       - name: Install dependencies
         run: npm ci
       - name: Run test
