--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -6,12 +6,12 @@ on:
       ruby-version:
         description: Ruby version
         required: false
-        default: '["2.7", "3.0", "3.1", "head"]'
+        default: '["2.7", "3.0", "3.1", "3.2", "head"]'
         type: string
       default-ruby-version:
         description: Default Ruby version
         required: false
-        default: "3.1"
+        default: "3.2"
         type: string
       os:
         description: OS name
