--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -11,7 +11,7 @@ on:
       default-ruby-version:
         description: Default Ruby version
         required: false
-        default: "3.2"
+        default: "ruby" # latest
         type: string
       os:
         description: OS name
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Ruby ${{ matrix.ruby-version }}
+      - name: Set up Ruby (${{ matrix.ruby-version }})
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
@@ -54,7 +54,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Ruby ${{ inputs.default-ruby-version }}
+      - name: Set up Ruby (${{ inputs.default-ruby-version }})
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ inputs.default-ruby-version }}
