--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -20,10 +20,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install actionlint
-        run: |
-          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash) latest /tmp
+      - name: Download problem matcher definition
+        run: curl -fsL https://raw.githubusercontent.com/rhysd/actionlint/main/.github/actionlint-matcher.json > .github/actionlint-matcher.json
       - name: Run actionlint
-        run: |
-          # shellcheck disable=SC2016
-          /tmp/actionlint -format '{{range $err := .}}::error file={{$err.Filepath}},line={{$err.Line}},col={{$err.Column}}::{{$err.Message}}\n{{end}}'
+        uses: docker://rhysd/actionlint:latest
+        with:
+          args: -color
