test: fail actionlint on purpose

--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -19,4 +19,4 @@ jobs:
       os: ${{ matrix.os }}
 
   lint:
-    uses: ./.github/workflows/nodejs-lint-reusable.yml
+    use: ./.github/workflows/nodejs-lint-reusable.yml
