Revert "ci: save problem matcher file for actionlint"
This reverts commit 1a6b0c54f1c95990fd7749d05a4b6a6d3e72691a.

--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Download problem matcher definition
+        run: curl -fsL https://raw.githubusercontent.com/rhysd/actionlint/main/.github/actionlint-matcher.json > .github/actionlint-matcher.json
       - name: Run actionlint
         uses: docker://rhysd/actionlint:latest
         with:
