ci: specify `-format` option instead of problem matcher

--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -20,9 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Download problem matcher definition
-        run: curl -fsL https://raw.githubusercontent.com/rhysd/actionlint/main/.github/actionlint-matcher.json > .github/actionlint-matcher.json
       - name: Run actionlint
         uses: docker://rhysd/actionlint:latest
         with:
-          args: -color
+          args: -color -format '{{range $err := .}}::error file={{$err.Filepath}},line={{$err.Line}},col={{$err.Column}}::{{$err.Message}}\n{{end}}'
