Revert "test: fail actionlint on purpose"
This reverts commit 1c1b6ed83d8c7121e0fc27e29767295633580421.

--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -19,4 +19,4 @@ jobs:
       os: ${{ matrix.os }}
 
   lint:
-    use: ./.github/workflows/nodejs-lint-reusable.yml
+    uses: ./.github/workflows/nodejs-lint-reusable.yml
