ci: refactor actionlint workflow (#19)
* ci: refactor actionlint workflow

- Use Docker image
- Use Problem matcher

* test: fail actionlint on purpose

* ci: save problem matcher file for actionlint

* Revert "ci: save problem matcher file for actionlint"

This reverts commit 1a6b0c54f1c95990fd7749d05a4b6a6d3e72691a.

* ci: specify `-format` option instead of problem matcher

* ci: stop using `-format` for simplicity

* Revert "test: fail actionlint on purpose"

This reverts commit 1c1b6ed83d8c7121e0fc27e29767295633580421.

--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -20,10 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install actionlint
-        run: |
-          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash) latest /tmp
       - name: Run actionlint
-        run: |
-          # shellcheck disable=SC2016
-          /tmp/actionlint -format '{{range $err := .}}::error file={{$err.Filepath}},line={{$err.Line}},col={{$err.Column}}::{{$err.Message}}\n{{end}}'
+        uses: docker://rhysd/actionlint:latest
+        with:
+          args: -color
