fix: replace "automerge" with "auto-merge" for consistency

--- a/.github/workflows/dependabot-auto-merge-reusable.yml
+++ b/.github/workflows/dependabot-auto-merge-reusable.yml
@@ -15,7 +15,7 @@ on:
         type: string
 
 jobs:
-  automerge:
+  auto-merge:
     if: ${{ github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     permissions:
