--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -13,6 +13,11 @@ on:
         required: false
         default: "ruby" # latest
         type: string
+      minimum-ruby-version:
+        description: Default Ruby version
+        required: false
+        default: ""
+        type: string
       os:
         description: OS name
         required: false
@@ -27,6 +32,7 @@ jobs:
     uses: ruby/actions/.github/workflows/ruby_versions.yml@master
     with:
       engine: cruby
+      min_version: ${{ inputs.minimum-ruby-version }}
 
   test:
     needs: ruby-versions
