fix: `min_version` type to number

--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -32,7 +32,7 @@ jobs:
     uses: ruby/actions/.github/workflows/ruby_versions.yml@master
     with:
       engine: cruby
-      min_version: ${{ inputs.minimum-ruby-version }}
+      min_version: ${{ inputs.minimum-ruby-version || 0 }}
 
   test:
     needs: ruby-versions
