--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -16,8 +16,7 @@ on:
       minimum-ruby-version:
         description: Default Ruby version
         required: false
-        default: ""
-        type: string
+        type: number
       os:
         description: OS name
         required: false
@@ -32,7 +31,7 @@ jobs:
     uses: ruby/actions/.github/workflows/ruby_versions.yml@master
     with:
       engine: cruby
-      min_version: ${{ inputs.minimum-ruby-version || 0 }}
+      min_version: ${{ inputs.minimum-ruby-version }}
 
   test:
     needs: ruby-versions
