--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "commitlint": "commitlint --from HEAD~5",
     "lint": "npm run prettier:check && npm run commitlint",
     "format": "npm run prettier:write",
-    "test": "echo \"No tests!\""
+    "test": "echo \"No tests!\"",
+    "test:coverage": "node -e \"fs.mkdirSync('coverage', {recursive: true}); fs.writeFileSync('coverage/sample.json', '[1, false]');\""
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
