feat: support npm v10
Note that npm v10 has dropped support for Node.js v16.
See https://github.com/npm/cli/releases/tag/v10.0.0

--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: "lts/*"
           cache: npm
       - name: Install latest npm
-        run: npm --global install npm@latest && npm -v
+        run: npm install --global npm@latest && npm -v
       - name: Install dependencies
         run: npm ci
       - name: Run lint
