--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["lts/*", "20"]
+        node-version: ["lts/*", "20", "16"]
         os: ["ubuntu-latest"]
     uses: ./.github/workflows/nodejs-test-reusable.yml
     with:
