--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           node-version: "lts/*"
           cache: npm
-      - name: Install latest npm
-        run: npm install --global npm@latest && npm -v
+      - name: Update npm to latest
+        run: |
+          npm install --global npm@latest
+          echo "Updated npm to $(npm -v)"
       - name: Install dependencies
         run: npm ci
       - name: Run lint
