--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -34,8 +34,10 @@ jobs:
           node-version: "lts/*"
           registry-url: "https://registry.npmjs.org"
           cache: npm
-      - name: Install latest npm
-        run: npm install --global npm@latest && npm -v
+      - name: Update npm to latest
+        run: |
+          npm install --global npm@latest
+          echo "Updated npm to $(npm -v)"
       - name: Install dependencies
         run: npm ci
       - name: Publish to npm registry
