fix: improve `npm install` success message

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Update npm to latest
         run: |
           npm install --global npm@latest
-          echo "Updated npm to $(npm -v)"
+          echo "Successfully updated npm to $(npm -v)"
       - name: Install dependencies
         run: npm ci
       - name: Publish to npm registry
