--- a/.github/workflows/nodejs-lint-reusable.yml
+++ b/.github/workflows/nodejs-lint-reusable.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Update npm to latest
         run: |
           npm install --global npm@latest
-          echo "Updated npm to $(npm -v)"
+          echo "Successfully updated npm to $(npm -v)"
       - name: Install dependencies
         run: npm ci
       - name: Run lint
