--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -53,7 +53,7 @@ jobs:
           else
             npm install --global npm@latest
           fi
-          echo "Updated npm to $(npm -v)"
+          echo "Successfully updated npm to $(npm -v)"
 
       - name: Install dependencies
         run: npm ci
