--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -44,21 +44,28 @@ jobs:
           node-version: ${{ inputs.node-version }}
           cache: npm
 
-      - name: Update npm to latest
+      - name: Get npm version
+        id: npm-version
         shell: bash
         run: |
           case $(node -v) in
             v16.*|v14.*|v12.*|v10.*)
-              npm install --global npm@9
+              npm_version=9
               ;;
             v18.*)
-              npm install --global npm@10
+              npm_version=10
               ;;
             *)
-              npm install --global npm@latest
+              npm_version=latest
               ;;
           esac
-          echo "Successfully updated npm to $(npm -v)"
+          echo "version=${npm_version}" >> "${GITHUB_OUTPUT}"
+
+      - name: Update npm to ${{ steps.npm-version.outputs.version }}
+        shell: bash
+        env:
+          npm_version: ${{ steps.npm-version.outputs.version }}
+        run: npm install --global "npm@${npm_version}"
 
       - name: Install dependencies
         run: npm ci
