--- a/.github/workflows/nodejs-test-reusable.yml
+++ b/.github/workflows/nodejs-test-reusable.yml
@@ -81,7 +81,8 @@ jobs:
         run: npm run test:coverage --ignore-scripts
         if: ${{ inputs.node-version == inputs.node-version-coverage }}
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v4
         if: ${{ inputs.node-version == inputs.node-version-coverage }}
         with:
           name: ${{ inputs.coverage-name }}
