--- a/.github/workflows/nodejs-release.yml
+++ b/.github/workflows/nodejs-release.yml
@@ -13,3 +13,5 @@ jobs:
     uses: ./.github/workflows/nodejs-release-reusable.yml
     with:
       publish: false
+    permissions:
+      contents: write
