--- a/.github/workflows/dependabot-auto-merge-reusable.yml
+++ b/.github/workflows/dependabot-auto-merge-reusable.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Fetch Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@v2
+        uses: dependabot/fetch-metadata@08eff52bf64351f401fb50d4972fa95b9f2c2d1b # v2.4.0
       - name: Enable auto-merge
         if: ${{ !contains(fromJSON(inputs.excluded-update-types), steps.metadata.outputs.update-type) }}
         run: gh pr merge --auto "--${MERGE_OPTION}" "$PR_URL"
