--- a/.github/workflows/ruby-test-reusable.yml
+++ b/.github/workflows/ruby-test-reusable.yml
@@ -28,7 +28,7 @@ permissions:
 
 jobs:
   ruby-versions:
-    uses: ruby/actions/.github/workflows/ruby_versions.yml@master
+    uses: ruby/actions/.github/workflows/ruby_versions.yml@e6eba27f7a9c48ccccb2eef935b8de5ba3facf8b
     with:
       engine: cruby
       min_version: ${{ inputs.minimum-ruby-version }}
