ci: enhance actionlint workflow with function and version reporting
- Add reusable actionlint function for better maintainability
- Include version reporting with -version flag for transparency
- Add verbose output for detailed feedback
- Specify bash shell explicitly for consistency

--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -21,4 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Run actionlint
-        run: docker run --rm -v "${GITHUB_WORKSPACE}:/repo" -w /repo rhysd/actionlint:latest -color
+        shell: bash
+        run: |
+          actionlint() {
+            docker run --rm -v "${GITHUB_WORKSPACE}:/repo" -w /repo rhysd/actionlint:latest "$@"
+          }
+          actionlint -version
+          actionlint -color -verbose
