chore(commitlint): fix `body-max-length` to `body-max-line-length`

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "commitlint": {
     "extends": "@commitlint/config-conventional",
     "rules": {
-      "body-max-length": [
+      "body-max-line-length": [
         2,
         "always",
         200
