feat: add concurrency to sharable workflows

--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -26,6 +26,7 @@ jobs:
       contents: write
       id-token: write
     timeout-minutes: 10
+    concurrency: ${{ github.workflow }}
     defaults:
       run:
         shell: bash
