--- a/.github/workflows/action-release-reusable.yml
+++ b/.github/workflows/action-release-reusable.yml
@@ -9,6 +9,7 @@ jobs:
     permissions:
       contents: write
     timeout-minutes: 10
+    concurrency: ${{ github.workflow }}
     defaults:
       run:
         shell: bash
