feat: add new Node.js release workflow for PR-based releases

--- a/.github/workflows/nodejs-release.yml
+++ b/.github/workflows/nodejs-release.yml
@@ -1,8 +1,9 @@
 name: Node.js Release
 
 on:
-  push:
-    tags: ["**"]
+  pull_request:
+    branches: [main]
+    types: [closed]
 
 jobs:
   release:
