--- a/.github/workflows/nodejs-release-reusable.yml
+++ b/.github/workflows/nodejs-release-reusable.yml
@@ -21,6 +21,7 @@ on:
 
 jobs:
   release:
+    if: ${{ github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/v') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -48,6 +49,24 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Create tag
+        id: create-tag
+        env:
+          PR_BRANCH: ${{ github.event.pull_request.head.ref }}
+        run: |
+          NEW_VERSION=$(jq -r '.version' package.json)
+          NEW_VERSION_TAG="v${NEW_VERSION}"
+          if [[ "${PR_BRANCH}" != "release/${NEW_VERSION_TAG}" ]]; then
+            echo "::error::The version in package.json (${NEW_VERSION}) does not match the version in the branch name (${PR_BRANCH})."
+            exit 1
+          fi
+
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
+          git tag "${NEW_VERSION_TAG}"
+          git push origin "${NEW_VERSION_TAG}"
+          echo "new-tag=${NEW_VERSION_TAG}" >> "${GITHUB_OUTPUT}"
+
       - name: Publish to npm registry
         if: ${{ inputs.publish }}
         run: |
@@ -60,15 +79,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DRAFT_RELEASE: ${{ inputs.draft }}
+          NEW_TAG: ${{ steps.create-tag.outputs.new-tag }}
         run: |
           notes_file="${RUNNER_TEMP}/notes.txt"
-          echo "See the [changelog](https://github.com/${GITHUB_REPOSITORY}/blob/${GITHUB_REF_NAME}/CHANGELOG.md) for details." >> "${notes_file}"
+          echo "See the [changelog](https://github.com/${GITHUB_REPOSITORY}/blob/${NEW_TAG}/CHANGELOG.md) for details." >> "${notes_file}"
 
           prev_tag_name=$(gh release view --json tagName --jq .tagName || echo '')
 
           if [[ -n "${prev_tag_name}" ]]; then
             echo '' >> "${notes_file}"
-            echo "https://github.com/${GITHUB_REPOSITORY}/compare/${prev_tag_name}...${GITHUB_REF_NAME}" >> "${notes_file}"
+            echo "https://github.com/${GITHUB_REPOSITORY}/compare/${prev_tag_name}...${NEW_TAG}" >> "${notes_file}"
           fi
 
           if [[ "${DRAFT_RELEASE}" == "true" ]]; then
@@ -77,9 +97,9 @@ jobs:
             options=''
           fi
 
-          gh release create "${GITHUB_REF_NAME}" --notes-file "${notes_file}" ${options}
+          gh release create "${NEW_TAG}" --notes-file "${notes_file}" ${options}
 
-          release_url=$(gh release view "${GITHUB_REF_NAME}" --json 'url' --jq '.url')
+          release_url=$(gh release view "${NEW_TAG}" --json 'url' --jq '.url')
 
           if [[ "${DRAFT_RELEASE}" == "true" ]]; then
             echo "::notice::Released ${release_url} as draft. Edit it to publish."
