fix: run `npm ci` before bumping version in release PR workflow

--- a/.github/workflows/nodejs-release-pr-reusable.yml
+++ b/.github/workflows/nodejs-release-pr-reusable.yml
@@ -37,6 +37,9 @@ jobs:
           npm install --global npm@latest
           echo "Successfully updated npm to $(npm -v)"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Bump version
         id: bump-version
         env:
