--- a/.github/workflows/nodejs-release-pr-reusable.yml
+++ b/.github/workflows/nodejs-release-pr-reusable.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0 # for changelog generation from commit history
 
       - name: Set up Node.js LTS
         uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
