--- a/.github/workflows/action-release-reusable.yml
+++ b/.github/workflows/action-release-reusable.yml
@@ -66,7 +66,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create "${NEW_TAG_NAME}" \
-            --notes "See the [changelog](https://github.com/${GITHUB_REPOSITORY}/blob/${NEW_TAG_NAME}/CHANGELOG.md) for details."
+            --notes "See the [changelog](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/blob/${NEW_TAG_NAME}/CHANGELOG.md) for details."
 
           release_url=$(gh release view "${NEW_TAG_NAME}" --json 'url' --jq '.url')
           echo "::notice::Released ${release_url}"
